# mem1

./: .dockerignore  .env.example  Dockerfile  README.md  config.py  docker-compose.yml  flake.nix  justfile  pyproject.toml
assistant/: assistant.py  main.py  models.py
assistant/database/: schema.py
assistant/infra/: embedder.py  graph_db.py  inference.py  vector_db.py
assistant/infra/database/: __init__.py  schema.py
assistant/utils/: logger.py  prompts.py  special_commands.py
infra/: embedder.py  inference.py  redis.py  vector_db.py
infra/database/: __init__.py  schema.py
mem1/: __init__.py  core.py
mem1/infra/: database.py  embedder.py  graph_db.py  schema.py  vectordb.py
mem1/utils/: enums.py  models.py  prompts.py  redis_key_manager.py
models/: README.md
src/: assistant.py  inference.py  main.py
src/database/: __init__.py  schema.py
src/utils/: context_utils.py
