[project]
name = "memory-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beanie>=2.0.0",
    "httpx>=0.28.1",
    "langfuse>=3.6.2",
    "logging>=0.4.9.6",
    "motor>=3.7.1",
    "neo4j>=6.0.2",
    "openai>=2.3.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "pymongo>=4.15.3",
    "qdrant-client>=1.15.1",
    "redis>=7.0.0",
]
